--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ body {
             width: 100%;
             height: 100%;
             /* background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%); */
+            background-color: white;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -156,7 +157,7 @@ body {
 
         /* Loading Text */
         .loading-text {
-            color: #ffffff;
+            color:black;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 14px;
             font-weight: 500;
