--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ body {
             height: 200px;
             border-radius: 50%;
             border: 3px solid transparent;
-            border-top-color: #4ecdc4;
+            border-top-color: #6366f1;
             animation: spin 1.5s linear infinite;
         }
 
@@ -218,7 +218,7 @@ body {
             bottom: 5px;
             border-radius: 50%;
             border: 3px solid transparent;
-            border-top-color: #ff6b6b;
+            border-top-color: #ec4899;
             animation: spin 2s linear infinite reverse;
         }
 
